almost worked out single link page tabs, not centered correctly, perhaps an extra div causing width issues

--- a/perma_web/static/css/bootstrap3.css
+++ b/perma_web/static/css/bootstrap3.css
@@ -4264,7 +4264,6 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 @media (min-width: 768px) {
   .navbar-nav {
-    float: left;
     margin: 0;
   }
   .navbar-nav > li {
